# conclave_v1

./: .gitignore  Dockerfile.node  Dockerfile.server  README.md  conclave.db  conclave_bench.db  conclave_bench_metrics.db  conclave_bench_metrics.db-shm  conclave_bench_metrics.db-wal  conclave_bench_nodes.db  conclave_metrics.db  conclave_rbac_test.db  conclave_scalability_bench.db-shm  conclave_scalability_bench.db-wal  conclave_sim.db  conclave_test_auth.db  conclave_test_flower.db  conclave_test_gov.db  conclave_test_ledger.db  conclave_test_metrics.db  conclave_test_monitor.db  conclave_test_mtls.db  conclave_test_notifications.db  conclave_test_orch.db  conclave_test_privacy.db  conclave_test_reports.db  conclave_test_sched.db  conclave_test_server.db  conclave_test_task.db  docker-compose.yml  docker-entrypoint-node.sh  pyproject.toml
benchmark_walkthroughs/: audit_ledger.md  baseline_comparison.md  end_to_end.md  fault_tolerance.md  metrics_db.md  model_scalability.md  node_scalability.md  security_overhead.md
benchmarks/: benchmark_audit_ledger.py  benchmark_comparison.py  benchmark_end_to_end.py  benchmark_fault_tolerance.py  benchmark_metrics_db.py  benchmark_model_scalability.py  benchmark_node_scalability.py  benchmark_security_overhead.py  generate_pdf_report.py
prompts/: 6.txt  7.txt  8.txt
results/: aggregation_times.txt  audit_ledger_scalability.csv  baseline_comparison.csv  end_to_end_performance.csv  fault_tolerance.csv  metrics_db_benchmark.csv  model_scalability.csv  node_scalability.csv  security_overhead.csv
src/conclave/: models.py
(+54 files in other folders)
