[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conclave-cli"
version = "0.1.0"
description = "Governance Control Plane for Federated Learning"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.0.0",
    "sqlalchemy>=2.0.0",
    "flwr>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "requests>=2.31.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "questionary>=2.0.0",
]

[project.scripts]
conclave = "conclave.cli.main:app"
conclave-server = "conclave.server.main:start"


[tool.setuptools.packages.find]
where = ["src"]
